@@ -31,10 +31,6 @@ CMD_HOMEDELETEOTHER_DEFAULT_HOME_DELETED=Default home for player %player% on wor
 CMD_HOMEDELETEOTHER_NO_HOME_FOUND=No home named "%home%" found for player %player%.
 CMD_HOMEDELETEOTHER_NO_DEFAULT_HOME_FOUND=No home found for player %player% on world %world%.
 
-CMD_HOMELIST_ALL_WORLDS=Home list for all worlds: 
-CMD_HOMELIST_FOR_WORLD=Home list on world "%world%": 
-CMD_HOMELIST_NO_HOMES_FOUND=No homes found for world "%world%".
-
 CMD_HOMEOTHER_TELEPORTING=Teleporting to player home "%home%" for %player% on world %world%.
 
 CMD_SETDEFAULTHOME_SPECIFY_HOMENAME=You must specify your home name to set as default.
@@ -147,3 +143,9 @@ SECOND_SHORTHAND=s
 #
 CMD_PERM_CHECK_TRUE=Player %yellow%%player% %red%HAS%default_color% permission %yellow%%permission%%default_color% on world %yellow%%world%%default_color% (perm system in use = %system%).
 CMD_PERM_CHECK_FALSE=Player %yellow%%player% %red%DOES NOT HAVE%default_color% permission %yellow%%permission%%default_color% on world %yellow%%world%%default_color% (perm system in use = %system%).
+
+#v1.6.1
+CMD_HOMELIST_ALL_WORLDS=Home list for all worlds (player %player%): 
+CMD_HOMELIST_FOR_WORLD=Home list on world "%world%" (player %player%): 
+CMD_HOMELIST_NO_HOMES_FOUND=No homes found for %player% on world "%world%".
+
